--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-main",
+  "name": "backend-game",
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
@@ -11,19 +11,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DaVinciCodeGame/backend-main.git"
+    "url": "git+https://github.com/DaVinciCodeGame/backend-game.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DaVinciCodeGame/backend-main/issues"
+    "url": "https://github.com/DaVinciCodeGame/backend-game/issues"
   },
-  "homepage": "https://github.com/DaVinciCodeGame/backend-main#readme",
+  "homepage": "https://github.com/DaVinciCodeGame/backend-game#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/morgan": "^1.9.4",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "dotenv": "^16.0.3",
