--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.7.0",
     "morgan": "^1.10.0",
     "winston": "^3.8.2"
   },
