--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/DaVinciCodeGame/backend-game#readme",
   "dependencies": {
     "joi": "^17.7.0",
+    "redis": "^4.5.1",
+    "socket.io": "^4.5.4",
     "winston": "^3.8.2"
   },
   "devDependencies": {
