chore: CI/CD 트리거 무시 목록 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,12 @@ name: CI/CD
 on:
   push:
     branches: main
+    paths-ignore:
+      - '.eslintrc'
+      - '.prettierrc'
+      - 'README.md'
+      - 'License'
+      - 'room'
 
 env:
   AWS_REGION: ap-northeast-2
