--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "backend-game",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest",
     "dev": "nodemon -r dotenv/config -e * --watch src/ src/server.ts",
     "start": "pm2-docker start dist/server.js",
     "lint": "eslint '.src/** /*.{ts,tsx,js,jsx}'",
@@ -24,21 +23,13 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.2",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.2"
   }
 }
