--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/DaVinciCodeGame/backend-game#readme",
   "dependencies": {
-    "ioredis": "^5.2.5",
-    "joi": "^17.7.0",
-    "socket.io": "^4.5.4",
-    "winston": "^3.8.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
