--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-game",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon -r dotenv/config -e * --watch src/ src/server.ts",
-    "start": "pm2-docker start dist/server.js",
-    "lint": "eslint '.src/** /*.{ts,tsx,js,jsx}'",
-    "lint:fix": "eslint --fix '.src/** /*.{ts,tsx,js,jsx}'"
+    "dev": "nodemon socket.js",
+    "start": "pm2 start socket.js",
+    "lint": "eslint '*.{js,jsx}'",
+    "lint:fix": "eslint --fix '*.{js,jsx}'"
   },
   "repository": {
     "type": "git",
