--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
             cd ${{ secrets.APP_PATH }}
             git pull
             npm install
-            pm2 restart server
+            pm2 restart socket
