--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/DaVinciCodeGame/backend-game#readme",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "axios": "^1.3.1",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
