--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/DaVinciCodeGame/backend-game#readme",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "@socket.io/cluster-adapter": "^0.2.1",
+    "@socket.io/sticky": "^1.0.2",
     "axios": "^1.3.1",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
